--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "feather-icons": "^4.29.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
